--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* Landing Page */
+
 .landing {
   display: flex;
   height: 100vh;
@@ -21,4 +23,48 @@
   padding: 7px 50px;
   border-radius: 50px;
   box-shadow: var(--shadow);
+}
+
+
+/* Menu Page */
+.menu {
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+.menu-title {
+  font-size: 35px;
+  font-weight: 700;
+}
+.menu-grid {
+  display: grid;
+  grid-template-columns: calc(100%/3) calc(100%/3) calc(100%/3);
+  width: 70%;
+}
+.menu-item {
+  padding: 100px;
+}
+.menu-grid a {
+  text-decoration: none;
+  color: var(--light-grey);
+}
+.menu-icon {
+  font-size: 60px;
+  transition: background 0.2s ease;
+}
+.menu-icon:hover {
+  background: linear-gradient(to right, var(--blue), var(--green));
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: background 0.2s ease;
+}
+
+.menu-item-name {
+  font-size: 20px;
+  margin-top: 50px;
+  opacity: 0;
+  visibility: hidden;
 }
