--- a/src/App.css
+++ b/src/App.css
@@ -61,10 +61,19 @@
   -webkit-text-fill-color: transparent;
   transition: background 0.2s ease;
 }
-
 .menu-item-name {
   font-size: 20px;
   margin-top: 50px;
   opacity: 0;
   visibility: hidden;
+}
+
+/* Details Page */
+.details {
+
+}
+.details-title {
+  text-align: center;
+  font-size: 50px;
+  text-transform: capitalize;
 }
